# lectio-diei

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  publish.yml  release.yml  rust.yml
migrations/: 20240705171408_create_lectionary_table.sql  20240705172407_create_reading_table.sql  20240728110243_add_alleluia.sql
src/: args.rs  client.rs  colorful_logger.rs  commands.rs  config.rs  date.rs  db.rs  display.rs  error.rs  html.rs  lectionary.rs  lib.rs  logging.rs  main.rs  orchestration.rs  path.rs
tests/: integration_test.rs
tests/resources/: assumption.html  sunday_or.html
