[package]
name = "lectio-diei"
version = "0.3.1-dev1"
edition = "2021"
description = "CLI application for displaying the daily Catholic readings"
repository = "https://github.com/Squidroot2/lectio-diei"
license = "MIT"
keywords = ["bible", "christian", "catholic", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
log = "0.4.22"
regex = "1.10.5"
reqwest = "0.12.5"
scraper = {version = "0.19.0", features = ["atomic"] }
serde = { version = "1.0.204", features = ["derive"] }
simplelog = { version = "0.12.2", features = ["termcolor"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
termcolor = "1.4.1"
time = "0.3.36"
tokio =  { version = "1.38", features = ["full"] }
toml = "0.8.14"
toml_edit = "0.22.15"

[lints.clippy]
cargo = {level = "warn", priority = -1 }
pedantic = {level = "warn", priority = -1}

# These lints limit naming conventions in ways I don't like
module_name_repetitions = "allow"
struct_field_names = "allow"

# Nothing can be done here
multiple_crate_versions = "allow"
